enabler/grafana-vs.yaml
apiVersion:  networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: false
    hosts:
    - "grafana.local"
    
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
  - "grafana.local"
  gateways:
  - grafana-gateway
  http:
  - route:
    - destination:
        port:
          number: 3000
        host: grafana
